# slam-gp_odometry

./: .gitignore  CMakeLists.txt  manifest.xml
data/: SparseGP_RBF_NL_xyz_velocities_train_at_1s_normalized.data  gp_sklearn.out  gp_sklearn_velocity.data  gp_sklearn_y_velocity.data  methods.py
scripts/: methods.py
src/: CMakeLists.txt  Dummy.cpp  Dummy.hpp  GPModel.hpp  Gpy.cpp  Gpy.hpp  Main.cpp  Sklearn.cpp  Sklearn.hpp  main.cpp
test/: CMakeLists.txt  foo.cpp  foo_boost.cpp  test_Dummy.cpp  test_gp_odometry.cpp
